@@ -26,7 +26,9 @@
         <!-- JDK module flags -->
         <jdk.module.args>
             --add-exports java.base/sun.nio.ch=ALL-UNNAMED
+            --add-opens java.base/sun.nio.ch=ALL-UNNAMED
             --add-opens java.base/java.nio=ALL-UNNAMED
+            --add-opens java.base/java.io=ALL-UNNAMED
         </jdk.module.args>
     </properties>
 
